2003-07-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/all:
  - Replaced with include/pqxx/pqxx to fix automake problem
 include/pqxx/*, src/*.cxx, test/test*.cxx:
  - Deprecated lots of functions with upper-case letters in names
  - Made old functions available if old-style headers are included
2003-06-23  Jeroen T. Vermeulen <jtv@xs4all.nl>
 doc/libpqxx.sgml:
  - Replaced by libpqxx.xml
 doc/libpqxx.xml:
  - New.  Thanks Wichert Akkerman!
 DoxyFile:
  - Added new header files
 include/pqxx/connection_base, include/pqxx/transaction_base,
 src/tablestream.cxx:
  - Fix crash closing tablestream on nonexistant table (thx Sean [Rogers?])
 include/pqxx/except:
  - Moved exception classes back into pqxx namespace where they belong
2003-06-14  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/*.h:
  - Deprecated; new headers have names not ending in ".h"
  - All backwards compatibility support restricted to old headers
2003-06-14  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/largeobject.h:
  - Fixed compile error in a basic_ilostream() constructor
  - Complete test coverage
 include/pqxx/result.h:
  - Updated test coverage; only binarystring remains to be done
 test/test057.cxx, test/test058.cxx, test/test059.cxx:
  - New
 win32/libpqxx.mak:
  - Added dbtransaction
 win32/test.mak:
  - Added tests 21 through 59
  - Added leading zeroes to all test names
2003-06-08  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/result.h:
  - Deprecated ColumnNumber() and ColumnName()
  - New column_number() and column_name() throw on error
  - Replaced some std:: with PGSTD::
2003-06-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/test*.cxx:
  - Prefixed test table names (events and orgevents) with "pqxx"
2003-06-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
 README:
  - Started list of projects using libpqxx
 include/pqxx/cursor.h:
  - Workaround for MetroWerks 8.3
2003-06-05  Jeroen T. Vermeulen <jtv@xs4all.nl>
 COPYING:
  - Finally written out
 README-UPGRADE:
  - New